# rin

./: Cargo.toml  Makefile  README.md  install_all.sh
binary/: Cargo.toml
binary/src/: main.rs
bk/src/: main.rs
mask/: Cargo.toml
mask/src/: main.rs
pac/: Cargo.toml  README.md  pac.sh
pac/src/: main.rs
rsplit/: .gitignore  Cargo.toml  Makefile
rsplit/src/: main.rs
ruxx/: .gitignore  Cargo.toml  Makefile
ruxx/src/: main.rs  markdown.rs
weather/: Cargo.toml  w.json
weather/src/: main.rs
wr/: .gitignore  Cargo.toml  Makefile
wr/src/: main.rs
