[package]
name = "wr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }   # 非同期ランタイム
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] } # HTTP クライアント
scraper = "0.13"                                     # HTML パース
rusqlite = { version = "0.29", features = ["bundled"] } # SQLite
futures = "0.3"  
